--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,4 +33,4 @@ jobs:
       with:
         arguments: build
     - name: Run with Gradle
-      run: ./gradlew run    
+      run: gradlew.bat run    
