--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,5 +32,8 @@ jobs:
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
-    - name: Run with Gradle
-      run: cmd.exe /C gradlew.bat run    
+    - name: Upload Build Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: build-artifacts
+        path: build/  
