--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,6 +37,9 @@ jobs:
       with:
         name: build-artifacts
         path: build/  
+    - name: Display .jar File Name
+      run: |
+        echo "The .jar file name is: $(ls build/*.jar)"
     - name: Download and List Artifacts
       uses: actions/download-artifact@v2
       with:
