--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -54,7 +54,7 @@ jobs:
         path: build-artifacts
     - name: Execute Application
       run: |
-        tar -xf build-artifacts/distributions/java-gradle-starter-project.tar -C build-artifacts/
+        tar -xf build-artifacts/distributions/java-gradle-starter-project.tar -C build-artifacts/distributions/
         # Replace the following command with the actual command to run your application
-        java -jar build-artifacts/java-gradle-starter-project.jar  
+        java -jar build-artifacts/distributions/java-gradle-starter-project.jar  
       
