--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -59,5 +59,5 @@ jobs:
         java -jar build-artifacts/distributions/java-gradle-starter-project.jar  
     - name: Display .jar File Name
       run: |
-        echo "The .jar file name is: $(find build-artifacts/distributions/ -name '*.jar')"
+        echo "The .jar file name is: $(find build-artifacts/ -name '*.jar')"
       
