--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,14 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.fxml', 'javafx.web', 'javafx.media' ]
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': mainClassName
+        )
+    }
+}
+
 application {
     mainModule = "com.mycompany.app"
     mainClass = "com.mycompany.app.App"
