--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -56,7 +56,8 @@ jobs:
       run: |
         tar -xf build-artifacts/distributions/java-gradle-starter-project.tar -C build-artifacts/
         echo "The .jar file name is: $(find build-artifacts/ -name '*.jar')"
-        # Replace the following command with the actual command to run your application
-        java -jar build-artifacts/java-gradle-starter-project/lib/java-gradle-starter-project.jar 
+        jarfile=$(ls build-artifacts/*.jar)
+        echo "Running $jarfile"
+        java -jar $jarfile
     
     
