--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -58,9 +58,9 @@ jobs:
         path: build-artifacts
     - name: Make gradlew executable
       run: |
-        chmod +x build-artifacts/gradlew
+        chmod +x build/gradlew
     - name: Execute Application
       run: |
-        cd build-artifacts
+        cd build
         ./gradlew run
     
