--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -64,6 +64,6 @@ jobs:
       run: |
         export DISPLAY=:99
         Xvfb :99 -screen 0 1024x768x16 &
-        cd build-artifacts
+        cd build
         ./gradlew run
     
