--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,6 +41,8 @@ jobs:
       run: |
           git tag ${{ needs.build.outputs.new_tag }}
           git push origin ${{ needs.build.outputs.new_tag }}
+      env:
+        GITHUB_TOKEN: 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
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
