--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,6 +37,8 @@ jobs:
           new_minor_version=$((latest_minor_version + 1))
           new_tag="v$latest_major_version.$new_minor_version"
           echo "::set-output name=new_tag::$new_tag"
+      env:
+        GITHUB_TOKEN: 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
     - name: Create and push new tag
       run: |
           git tag ${{ needs.build.outputs.new_tag }}
