--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -49,7 +49,7 @@ jobs:
           GIT_PASSWORD: ${{ secrets.GIT_PASSWORD }}
           GIT_REPOSITORY: https://github.com/chandrupsj22/Gradle-start-project.git
       run: |
-          git remote set-url origin https://$GIT_USERNAME:$GIT_PASSWORD@$GIT_REPOSITORY
+          git remote set-url origin $GIT_USERNAME:$GIT_PASSWORD@$GIT_REPOSITORY
           git push origin HEAD
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
