--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,11 +40,11 @@ jobs:
           
     - run: |
           git config user.name chandrupsj22
-          git config user.email chandrupsj22@users.noreply.github.com
+          git config user.email 110910097+chandrupsj22@users.noreply.github.com
           
     - name: Push changes
       uses: ad-m/github-push-action@main
-      with:
+      env:
           github_token: ${{ secrets.PAT }}
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
