--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,9 +22,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: chandrupsj22/checkout@v3
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: chandrupsj22/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
@@ -46,7 +46,7 @@ jobs:
       run: |
           git tag ${{ needs.build.outputs.new_tag }}
           git push origin main ${{ needs.build.outputs.new_tag }}
-          github-token: ${{ secrets.PAT }}
+          
       env:
         GITHUB_TOKEN: ${{ secrets.PAT }}}
     - name: Build with Gradle
