--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
     - uses: chandrupsj22/checkout@v3
     - name: Set up JDK 11
-      uses: chandrupsj22/setup-java@v3
+      uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
