--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,11 +18,12 @@ permissions:
 
 jobs:
   build:
-
+    env:
+        author: chandrupsj22
     runs-on: ubuntu-latest
 
     steps:
-    - uses: chandrupsj22/checkout@v3
+    - uses: actions/checkout@v3
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
