--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,12 +18,11 @@ permissions:
 
 jobs:
   build:
-    env:
-        author: chandrupsj22
+
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    #- uses: actions/checkout@v3
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
@@ -39,17 +38,13 @@ jobs:
           new_tag="v$latest_major_version.$new_minor_version"
           echo "::set-output name=new_tag::$new_tag"
           
-    - run: |
-          git config user.name chandrupsj22
-          git config user.email 110910097+chandrupsj22@users.noreply.github.com
-          
     - name: Create and push new tag
       run: |
           git tag ${{ needs.build.outputs.new_tag }}
           git push origin main ${{ needs.build.outputs.new_tag }}
-          
+          github-token: ${{ secrets.PAT }}
       env:
-        GITHUB_TOKEN: ${{ secrets.PAT }}}
+        GITHUB_TOKEN: ${{ secrets.PAT }}
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
