--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Create and push new tag
       run: |
           git tag ${{ needs.build.outputs.new_tag }}
-          git push origin main ${{ needs.build.outputs.new_tag }}
+          git push origin ${{ needs.build.outputs.new_tag }}
           github-token: ${{ secrets.PAT }}
       env:
         GITHUB_TOKEN: ${{ secrets.PAT }}
