--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,12 +22,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout code
     - uses: actions/checkout@v3
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Set up Git user
+      run: |
+        git config --global user.name "chandrupsj22"
+        git config --global user.email "133023965+chandru-kloudping@users.noreply.github.com"
     - name: Determine latest tag and increment version
       id: tag
       run: |
