--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
@@ -18,12 +11,11 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
@@ -42,12 +34,10 @@ jobs:
           new_minor_version=$((latest_minor_version + 1))
           new_tag="v$latest_major_version.$new_minor_version"
           echo "::set-output name=new_tag::$new_tag"
-          
     - name: Create and push new tag
       run: |
           git tag ${{ needs.build.outputs.new_tag }}
           git push origin ${{ needs.build.outputs.new_tag }}
-          github-token: ${{ secrets.PAT }}
       env:
         GITHUB_TOKEN: ${{ secrets.PAT }}
     - name: Build with Gradle
@@ -58,7 +48,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: build-artifacts
-        path: build/  
+        path: build/
     - name: List Artifacts
       run: |
         echo "Build Artifacts:"
@@ -73,4 +63,3 @@ jobs:
         path: build-artifacts
     - name: List Artifact Contents
       run: ls -R build-artifacts/distributions
-    
