--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -21,6 +21,15 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Create Tag
+      uses: actions/create-release@v1
+      env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
+      with:
+          tag_name: v1.0.0
+          release_name: Release 1.0.0
+          draft: false
+          prerelease: false
     - name: Determine latest tag and increment version
       id: tag
       run: |
