--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,7 +29,7 @@ jobs:
          draft: false
          prerelease: false
       env:
-         GITHUB_TOKEN: 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
+         GITHUB_TOKEN: "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"
     - name: Determine latest tag and increment version
       id: tag
       run: |
