--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,29 +21,11 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-    - name: Create Tag
-      uses: actions/create-release@v1
-      with:
-         tag_name: v1.0.0
-         release_name: Release 1.0.0
-         draft: false
-         prerelease: false
-      env:
-         GITHUB_TOKEN: ${{ secrets.PAT2 }}
-    - name: Determine latest tag and increment version
-      id: tag
+    - name: Create tag
       run: |
-          latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0")
-          latest_major_version=$(echo $latest_tag | cut -d'v' -f2 | cut -d'.' -f1)
-          latest_minor_version=$(echo $latest_tag | cut -d'v' -f2 | cut -d'.' -f2)
-          new_minor_version=$((latest_minor_version + 1))
-          new_tag="v$latest_major_version.$new_minor_version"
-          echo "::set-output name=new_tag::$new_tag"
-    - name: Create and push new tag
-      run: |
-          git tag ${{ needs.build.outputs.new_tag }}
-          git push origin main ${{ needs.build.outputs.new_tag }}
-      
+          git tag -a v${{ github.run_number }} -m "Tag created by GitHub Actions"
+          git push origin --tags
+          
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
