--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,12 +35,12 @@ jobs:
         new_tag="v$latest_major_version.$new_minor_version"
         echo "::set-output name=new_tag::$new_tag"
 
-    - name: Create and push new tag
-      run: |
-        git tag ${{ steps.latest_tag.outputs.tag }}
-        git push origin ${{ steps.latest_tag.outputs.tag }}
-      env:
-          github_token: ${{ secrets.PAT }}
+    - name: Push tag
+      uses: ad-m/github-push-action@v0.6.0
+      with:
+        github_token: ${{ secrets.PAT }}
+        branch: ${{ github.ref }}
+        tags: ${{ steps.latest_tag.outputs.tag }}
           
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
