--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Determine Latest Tag
       id: latest_tag
       run: |
-          latest_tag=$(git describe --abbrev=0 --tags "v1.*" 2>/dev/null)
+          latest_tag=$(git describe --tags --abbrev=0 "v1.*" 2>/dev/null)
           if [ -z "$latest_tag" ]; then
             echo "No previous tags found, starting with v1.0"
             echo "::set-output name=tag::v1.0"
