--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,7 +36,7 @@ jobs:
           echo "::set-output name=new_tag::$new_tag"
     - name: Create tag
       run: |
-          tag_name=${{ steps.latest_tag.outputs.tag }}
+          tag_name=${{ steps.latest_tag.outputs.new_tag }}
           git tag -a -m "Tag created by GitHub Actions" "$tag_name"
           git push origin --tags
                 
