--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
           tag_name=${{ steps.latest_tag.outputs.new_tag }}
           git tag -a -m "Tag created by GitHub Actions" "$tag_name"
-          git push origin --tags
+          git push origin "$tag_name"
                 
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
