--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,8 +29,8 @@ jobs:
       id: latest_tag
       run: |
           latest_tag=$(git describe --tags "v1.*" --abbrev=0 2>/dev/null || echo "v1.0")
-          latest_major_version=$(echo $latest_tag | cut -d'v' -f2 | cut -d'.' -f1)
-          latest_minor_version=$(echo $latest_tag | cut -d'v' -f2 | cut -d'.' -f2)
+          latest_major_version= 1
+          latest_minor_version= $(echo $latest_tag | cut -d'v' -f2 | cut -d'.' -f2)
           new_minor_version=$((latest_minor_version + 1))
           new_tag="v$latest_major_version.$new_minor_version"
           
