--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,19 +28,25 @@ jobs:
     - name: Determine Latest Tag
       id: latest_tag
       run: |
-        latest_tag=$(git describe --tags "v1.*" --abbrev=0 2>/dev/null || echo "v1.0")
+        latest_tag=$(git describe --tags "v1.1.*" --abbrev=0 2>/dev/null || echo "v1.1.0")
         latest_major_version=$(echo $latest_tag | cut -d'v' -f2 | cut -d'.' -f1)
         latest_minor_version=$(echo $latest_tag | cut -d'v' -f2 | cut -d'.' -f2)
-        new_minor_version=$((latest_minor_version + 1))
-        new_tag="v$latest_major_version.$new_minor_version"
+        latest_patch_version=$(echo $latest_tag | cut -d'v' -f2 | cut -d'.' -f3)
+    
+        new_major_version=$latest_major_version
+        new_minor_version=$latest_minor_version
+        new_patch_version=$((latest_patch_version + 1))
+    
+        new_tag="v$new_major_version.$new_minor_version.$new_patch_version"
+    
         echo "::set-output name=new_tag::$new_tag"
 
     - name: Create tag
       run: |
         tag_name=${{ steps.latest_tag.outputs.new_tag }}
-        new_tag_name="$tag_name-$(date +'%Y%m%d%H%M%S')"
-        git tag -a -m "Tag created by GitHub Actions" "$new_tag_name"
-        git push origin "$new_tag_name"
+        #new_tag_name="$tag_name-$(date +'%Y%m%d%H%M%S')"
+        git tag -a -m "Tag created by GitHub Actions" "$tag_name"
+        git push origin "$tag_name"
                 
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
