--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,11 +25,20 @@ jobs:
       run: |
           git config --global user.name "chandrupsj22"
           git config --global user.email "133023965+chandru-kloudping@users.noreply.github.com"
+    - name: Determine Latest Tag
+      id: latest_tag
+      run: |
+        latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0")
+        latest_major_version=$(echo $latest_tag | cut -d'v' -f2 | cut -d'.' -f1)
+        latest_minor_version=$(echo $latest_tag | cut -d'v' -f2 | cut -d'.' -f2)
+        new_minor_version=$((latest_minor_version + 1))
+        new_tag="v$latest_major_version.$new_minor_version"
+        echo "::set-output name=new_tag::$new_tag"
     - name: Create tag
       run: |
-          git tag -a v${{ github.run_number }} -m "Tag created by GitHub Actions"
+          git tag -a ${{ steps.latest_tag.outputs.new_tag }} -m "Tag created by GitHub Actions"
           git push origin --tags
-          
+                
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
