--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Create tag
       run: |
         tag_name=${{ steps.latest_tag.outputs.new_tag }}
-        git tag -a -m "Tag created by GitHub Actions" "$tag_name"
+        git tag -a -m "Tag created by GitHub Actions" "$tag_name".${{ github.run_number }}
         git push origin "$tag_name"
                 
     - name: Build with Gradle
