--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,8 +43,8 @@ jobs:
         echo "::set-output name=new_tag::$new_tag"
     - name: Create tag
       run: |
-        tag_name=${{ steps.latest_tag.outputs.new_tag }}
-        git tag -a -m "Tag created by GitHub Actions" "$tag_name".${{ github.run_number }}
+        tag_name=${{ steps.latest_tag.outputs.new_tag }}.${{ github.run_number }}
+        git tag -a -m "Tag created by GitHub Actions" "$tag_name"
         git push origin "$tag_name"
                 
     - name: Build with Gradle
