--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,11 +39,12 @@ jobs:
         new_minor_version=$((new_minor_version + 1))
         new_tag="v$latest_major_version.$new_minor_version"
         done
-    
+        branch_name=$(git symbolic-ref --short HEAD)
+        branch_name=${branch_name////-} 
         echo "::set-output name=new_tag::$new_tag"
     - name: Create tag
       run: |
-        tag_name=${{ steps.latest_tag.outputs.new_tag }}.${{ github.run_number }}
+        tag_name=${{ steps.latest_tag.outputs.new_tag }}.${{ github.run_number }}-$branch_name
         git tag -a -m "Tag created by GitHub Actions" "$tag_name"
         git push origin "$tag_name"
                 
