--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,7 +43,8 @@ jobs:
         echo "::set-output name=new_tag::$new_tag"
     - name: Create tag
       run: |
-        tag_name=${{ steps.latest_tag.outputs.new_tag }}.${{ github.run_number }}."${{ github.repository.split('/')[1] }}"
+        repo_name=$(basename "${{ github.repository }}")
+        tag_name=${{ steps.latest_tag.outputs.new_tag }}.${{ github.run_number }}.${repo_name}
         git tag -a -m "Tag created by GitHub Actions" "$tag_name"
         git push origin "$tag_name"
                 
