--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Create tag
       run: |
         repo_name=$(basename "${{ github.repository }}")
-        tag_name=${{ steps.latest_tag.outputs.new_tag }}.${{ github.run_number }}.${repo_name}
+        tag_name=${{ steps.latest_tag.outputs.new_tag }}.${{ github.run_number }}.${{ github.workspace }}
         git tag -a -m "Tag created by GitHub Actions" "$tag_name"
         git push origin "$tag_name"
                 
