--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         repo_name=$(basename "${{ github.repository }}")
         workspc =$(basename "${{ github.workspace }}")
-        tag_name=${{ steps.latest_tag.outputs.new_tag }}.${{ github.run_number }}.$workspc
+        tag_name=${{ steps.latest_tag.outputs.new_tag }}.${{ github.run_number }}.${workspc}
         git tag -a -m "Tag created by GitHub Actions" "$tag_name"
         git push origin "$tag_name"
                 
