--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Determine Latest Tag
       id: latest_tag
       run: |
-        latest_tag=$(git describe --tags "v1.*" --abbrev=0 2>/dev/null || echo "v1.0")
+        latest_tag=$(git describe --abbrev=0 --tags 2>/dev/null || echo "v1.0")
         latest_major_version=$(echo $latest_tag | cut -d'v' -f2 | cut -d'.' -f1)
         latest_minor_version=$(echo $latest_tag | cut -d'v' -f2 | cut -d'.' -f2)
     
