--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,9 +38,9 @@ jobs:
     - name: Create tag
       run: |
         #repo_name=$(basename "${{ github.repository }}")
-        workspc=$(basename "${{ github.workspace }}") #The directory where the repository is checked out in the runner.
+        workspace=$(basename "${{ github.workspace }}") #The directory where the repository is checked out in the runner.
         Branch=$(basename "${{ github.ref }}")
-        tag_name=${{ steps.latest_tag.outputs.new_tag }}.${{ github.run_number }}.${Branch}.${workspc}
+        tag_name=${{ steps.latest_tag.outputs.new_tag }}.${{ github.run_number }}.${Branch}.${workspace}
         git tag -a -m "Tag created by GitHub Actions" "$tag_name"
         git push origin "$tag_name"
                 
