--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,13 +44,13 @@ jobs:
         git tag -a -m "Tag created by GitHub Actions" "$tag_name"
         git push origin "$tag_name"
                 
-    #- name: Build with Gradle
-      #uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      #with:
-        #arguments: build
     - name: Build with Gradle
-      run: |
-        ./gradlew build --no-daemon -g "${{ github.workspace }}/${{ github.run_number }}"
+      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      with:
+        arguments: build --no-daemon -g "${{ github.workspace }}/${{ github.run_number }}"
+    #- name: Build with Gradle
+      #run: |
+        #./gradlew build --no-daemon -g "${{ github.workspace }}/${{ github.run_number }}"
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v2
       with:
