--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -45,12 +45,15 @@ jobs:
         git push origin "$tag_name"
                 
     - name: Build with Gradle
+      id: gradle-build
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build --no-daemon -g "${{ github.workspace }}/${{ github.run_number }}"
-    #- name: Build with Gradle
-      #run: |
-        #./gradlew build --no-daemon -g "${{ github.workspace }}/${{ github.run_number }}"
+    - name: Capture build file path
+      id: capture-build-file-path
+      run: |
+        echo "Build file path: ${{ steps.gradle-build.outputs.buildFile }}"
+        
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v2
       with:
