--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,16 +43,13 @@ jobs:
         tag_name=${{ steps.latest_tag.outputs.new_tag }}.${{ github.run_number }}.${Branch}.${workspace}
         git tag -a -m "Tag created by GitHub Actions" "$tag_name"
         git push origin "$tag_name"
-                
     - name: Build with Gradle
-      id: gradle-build
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build --no-daemon -g "${{ github.workspace }}/${{ github.run_number }}"
-    - name: Capture build file path
-      id: capture-build-file-path
       run: |
-        echo "Build file path:" ${{ steps.gradle-build.outputs.buildFile }}
+        ./gradlew build --no-daemon -g "${{ github.workspace }/${{ github.run_number }}"            
+    - name: List Artifacts
+      run: |
+        echo "Build Artifacts:"
+        ls ${{ steps.view.outputs.artifact_folder }}
         
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v2
