--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -45,7 +45,7 @@ jobs:
         git push origin "$tag_name"
     - name: Build with Gradle
       run: |
-        ./gradlew build --no-daemon -g "${{ github.workspace }/${{ github.run_number }}"            
+        ./gradlew build --no-daemon -g "${{ github.workspace }}/${{ github.run_number }}"            
     - name: List Artifacts
       run: |
         echo "Build Artifacts:"
