--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -69,4 +69,4 @@ jobs:
         name: build-artifacts
         path: build-artifacts
     - name: List Artifact Contents
-      run: ls -R build-artifacts/distributions
+      run: ls -R build-artifacts/
