--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,6 +46,9 @@ jobs:
     - name: Build with Gradle
       run: |
         ./gradlew build --no-daemon -g "${{ github.workspace }}/${{ github.run_number }}" 
+        
+    - name: Rename Jar File
+      run: |
         cd build/libs/
         mv "java-gradle-starter-project.jar" "java-gradle-starter-project-rename.jar"
     - name: List Artifacts
