--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -74,7 +74,7 @@ jobs:
         name: build-artifacts
         path: build-artifacts
     - name: List Artifact Contents
-      run: ls -R build-artifacts/
+      run: ls -R build-artifacts/libs
       
     - name: List Artifacts after rename
       run: |
