--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -75,7 +75,9 @@ jobs:
         path: build-artifacts
     - name: List Artifact Contents
       run: ls -R build-artifacts/libs
-      
+    - name: Set JAVA_HOME
+      run: |
+         echo "JAVA_HOME=$(echo $JAVA_HOME)" >> $GITHUB_ENV  
     - name: List Artifacts after rename
       run: |
         echo "Build Artifacts:"
