--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -78,6 +78,7 @@ jobs:
     - name: Set JAVA_HOME
       run: |
          echo "JAVA_HOME=$(echo $JAVA_HOME)" >> $GITHUB_ENV  
+         echo "$GITHUB_ENV"
     - name: List Artifacts after rename
       run: |
         echo "Build Artifacts:"
