--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,7 +46,12 @@ jobs:
     - name: Build with Gradle
       run: |
         ./gradlew build --no-daemon -g "${{ github.workspace }}/${{ github.run_number }}" 
-        
+    - name: Find Build Directory
+      id: find-dir
+      run: echo "::set-output name=build-dir::$(find . -name target -type d)"
+      
+    - name: Print Build Directory
+      run: echo "Build Directory:" ${{ steps.find-dir.outputs.build-dir }}    
     - name: Rename Jar File
       run: |
         cd build/libs/
